fixed user score displaying the wrong colour in dark mode

--- a/css/movies_info.css
+++ b/css/movies_info.css
@@ -441,7 +441,7 @@ body {
         color: var(--clr-grey);
     }
     .grid-container .right .content .grid-content .critics #critics-score,
-    .grid-container .right .content .grid-content .user #viewer-score {
+    .grid-container .right .content .grid-content .user #user-score {
         color: var(--clr-darkGold);
     }
 }
